--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "main": "src/game.ts",
     "scripts": {
         "dev": "rollup --config rollup.config.dev.js",
-        "build": "rollup --config rollup.config.dist.js",
-        "watch": "rollup --watch --config rollup.config.dev.js"
+        "build": "rollup --config rollup.config.dist.js && npm run copy-assets",
+        "watch": "rollup --watch --config rollup.config.dev.js",
+        "copy-assets": "cpx 'dist/assets/**/*' ./docs/assets"
     },
     "repository": {
         "type": "git",
@@ -21,6 +22,7 @@
     "dependencies": {},
     "devDependencies": {
         "@rollup/plugin-replace": "^2.3.0",
+        "cpx": "^1.5.0",
         "phaser": "^3.22.0",
         "rollup": "^1.29.0",
         "rollup-plugin-commonjs": "^10.1.0",
