--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "main": "src/game.ts",
     "scripts": {
         "dev": "rollup --config rollup.config.dev.js",
-        "build": "rollup --config rollup.config.dist.js && npm run copy-assets",
+        "build": "npm run clear-docs && rollup --config rollup.config.dist.js && npm run copy-assets",
         "watch": "rollup --watch --config rollup.config.dev.js",
-        "copy-assets": "cpx 'dist/assets/**/*' ./docs/assets"
+        "copy-assets": "cpx 'dist/assets/**/*' ./docs/assets",
+        "clear-docs": "rimraf docs/*"
     },
     "repository": {
         "type": "git",
@@ -24,8 +25,10 @@
         "@rollup/plugin-replace": "^2.3.0",
         "cpx": "^1.5.0",
         "phaser": "^3.22.0",
+        "rimraf": "^3.0.2",
         "rollup": "^1.29.0",
         "rollup-plugin-commonjs": "^10.1.0",
+        "rollup-plugin-fill-html": "^1.1.0",
         "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-serve": "^1.0.1",
         "rollup-plugin-typescript2": "^0.25.3",
