--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-    "name": "phaser3-typescript-project-template",
+    "name": "doma_na_telezhnoj",
     "version": "1.0.2",
-    "description": "A Phaser 3 Project Template using Rollup and TypeScript",
+    "description": "Game: doma na telezhnoj",
     "main": "src/game.ts",
     "scripts": {
         "dev": "rollup --config rollup.config.dev.js",
         "build": "npm run clear-docs && rollup --config rollup.config.dist.js && npm run copy-assets",
         "watch": "rollup --watch --config rollup.config.dev.js",
-       "copy-assets": "cpx dist/assets/**/* ./docs/assets",
+        "copy-assets": "cpx \"dist/assets/**/*\" ./docs/assets",
         "clear-docs": "rimraf docs/*"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/photonstorm/phaser3-typescript-project-template.git"
+        "url": "https://github.com/AntonovAv/doma_na_telezhnoj"
     },
-    "author": "Richard Davey <rich@photonstorm.com> (http://www.photonstorm.com)",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/photonstorm/phaser3-typescript-project-template/issues"
+        "url": "https://github.com/AntonovAv/doma_na_telezhnoj/issues"
     },
-    "homepage": "https://github.com/photonstorm/phaser3-typescript-project-template#readme",
+    "homepage": "https://github.com/AntonovAv/doma_na_telezhnoj/blob/master/README.md",
     "dependencies": {},
     "devDependencies": {
         "@rollup/plugin-replace": "^2.3.0",
